src/plugins/directshow/player/directshowplayerservice.cpp
@@ -535,8 +535,6 @@ void DirectShowPlayerService::doRender(QMutexLocker *locker)
 
         m_executedTasks |= Render;
     }
-
-    m_loop->wake();
 }
 
 void DirectShowPlayerService::doFinalizeLoad(QMutexLocker *locker)
